[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
interpreter = { path = "../interpreter" }
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2", features = ["js"] }
#actix-web = "4"
#actix-files = "0.6.5"

[dependencies.web-sys]
version = "0.3.69"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
